--- a/app/views/nodes/whats_news.html.erb
+++ b/app/views/nodes/whats_news.html.erb
@@ -15,7 +15,7 @@
         <div class="news_box clearfix">
           <div class="news_link">
             <p>
-              <a href="#"><span class="icon-bag"></span><b class="theme_title">事件</b></a>
+              <a href="/nodes/62"><span class="icon-bag"></span><b class="theme_title">事件</b></a>
             </p>
           </div>
           <!-- <div class="news_link">
@@ -25,7 +25,7 @@
           </div> -->
           <div class="news_link">
             <p>
-              <a href="#"><span class="icon-gift"></span><b class="theme_title">活动</b></a>
+              <a href="/nodes/61"><span class="icon-gift"></span><b class="theme_title">活动</b></a>
             </p>
           </div>
           <!-- <div class="news_link">
