--- a/app/views/nodes/show_list_triple.html.erb
+++ b/app/views/nodes/show_list_triple.html.erb
@@ -29,13 +29,13 @@
                 <% @node.children.each do |node| %>
                 <div class="block-list__panel">
                   <div class="block-list__image">
-                    <a href="/take-action/volunteer"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Vol_724x352_1.jpg" width="724" height="352" alt=""></a>      
+                    <a href="/nodes/<%= node.id %>"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Vol_724x352_1.jpg" width="724" height="352" alt=""></a>      
                   </div>  
                   <h2 class="block-list__title">
                     <a href="/nodes/<%= node.id %>"><%= node.title %></a>
                   </h2> 
                   <div class="block-list__excerpt">
-                    <p>There are a variety of ways to volunteer with us.  <a href="/take-action/volunteer" class="more-link">(Read More)</a></p>
+                    <p><%= node.desc %> <a href="/nodes/<%= node.id %>" class="more-link">(更多)</a></p>
                   </div>  
                 </div>
                 <% end %>
