--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="skew">
     <div class="container">
 
-      <a href="/nodes/2" class="site-logo">
+      <a href="http://www.chinesevegansociety.com/" class="site-logo">
         <%= image_tag "origin/logo.png" %>
       </a>
       <a href="#" class="mobile-nav">
