--- a/app/views/nodes/show_list_single.html.erb
+++ b/app/views/nodes/show_list_single.html.erb
@@ -38,7 +38,7 @@
                 <div class="content clearfix">
                   <div class="block-list__panel">
                     <div class="block-list__image">
-                      <a href="/nodes/<%= node.id %>"><%= node.cover_url(:on_use), width: 724, height: 352, typeof: "foaf:Image" %></a>
+                      <a href="/nodes/<%= node.id %>"><%= image_tag node.cover_url(:on_use), width: 724, height: 352, typeof: "foaf:Image" %></a>
                     </div>  
                     <div class="block-list__inner-container">
 
