尝试它一个月 link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,7 +38,7 @@
 
           <aside class="page-sidebar">
             <h2 class="try-it__title">
-              <a href="/try-vegan/get-support">尝试它一个月</a>
+              <a href="/nodes/76">尝试它一个月</a>
             </h2>
 
 
