--- a/app/views/application/_right_menu.html.erb
+++ b/app/views/application/_right_menu.html.erb
@@ -3,10 +3,10 @@
 <div class="menu-block-wrapper menu-block-1 menu-name-main-menu parent-mlid-0 menu-level-2">
   <ul class="menu clearfix">
     <% @node.parent.siblings.each do |sib| %>
-    <li class="collapsed menu-mlid-2030"><a href="/nodes/<%= sib.id %>" title=""><%= sib.title %></a>
+    <li class="<% if sib.id == @node.parent.id %>expanded active-trail active<% else %>collapsed<% end %> menu-mlid-2030">
+      <a href="/nodes/<%= sib.id %>" title="" <% if sib.id == @node.parent.id %>class="active-trail active"<% end %>><%= sib.title %></a>
       <% if sib.id == @node.parent.id %>
       <ul class="menu clearfix">
-        <li class="first leaf active-trail active menu-mlid-2560"><a href="/nodes/<%= @node.id %>" title=""><%= @node.title %></a></li>
         <% @node.siblings.each do |sib| %>
         <li class="leaf menu-mlid-2560"><a href="/nodes/<%= sib.id %>" title=""><%= sib.title %></a></li>
         <% end %>
