--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -19,7 +19,7 @@
       
       <div class="site-nav">
         <ul class="site-nav__item">
-          <li class="menu-1092 first"><a href="<%= whats_news_nodes_path %>" title=""<% if @node && (@node.id == 60 || @node.ancestor_ids.include?(60)) %>class="active-trail"<% end %>>什么是新的?</a></li>
+          <li class="menu-1092 first"><a href="<%= whats_news_nodes_path %>" title=""<% if current_page?(whats_news_nodes_path) || (@node && (@node.id == 60 || @node.ancestor_ids.include?(60))) %>class="active-trail"<% end %>>什么是新的?</a></li>
           <li class="menu-1027"><a href="/nodes/55" title=""<% if @node && (@node.id == 55 || @node.ancestor_ids.include?(55)) %>class="active-trail"<% end %>>尝试素食</a></li>
           <li class="menu-1034"><a href="/nodes/56" title="" <% if @node && (@node.id == 56 || @node.ancestor_ids.include?(56)) %>class="active-trail"<% end %>>采取行动</a></li>
           <li class="menu-1046"><a href="/nodes/57" title=""<% if @node && (@node.id == 57 || @node.ancestor_ids.include?(57)) %>class="active-trail"<% end %>>资源</a></li>
