--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,23 +9,23 @@
       <ul class="slides">
         <li>
           <div class="container skew">
-            <a href="take-action/join-us/become-member"><h2 class="hero__title">A voice for animals</h2></a>
-            <a class="button hero__button" href="take-action/join-us/become-member">become a member</a>
+            <a href="javascript:void(0);"><h2 class="hero__title">A voice for animals</h2></a>
+            <a class="button hero__button" href="javascript:void(0);">become a member</a>
           </div>
           <%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
         <li>
           <div class="container skew">
-            <a href="http://www.vegansociety.com/whats-new/campaigns/love-vegan"><h2 class="hero__title">Run Vegan</h2></a>
-            <a class="button hero__button" href="http://www.vegansociety.com/whats-new/campaigns/love-vegan">Find out more</a>
+            <a href="/nodes/3"><h2 class="hero__title">Run Vegan</h2></a>
+            <a class="button hero__button" href="/nodes/3">Find out more</a>
           </div>
           <%= image_tag "origin/RV_HeroSlide.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
         <li>
           <div class="container skew">
-            <a href="/your-business"><h2 class="hero__title">Grow your business today</h2></a>
+            <a href="/nodes/1"><h2 class="hero__title">Grow your business today</h2></a>
 
-            <a class="button hero__button" href="/your-business">Get the trademark</a>
+            <a class="button hero__button" href="/nodes/1">Get the trademark</a>
           </div>
           <%= image_tag "origin/shutterstock_94440970.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
