暂时隐藏按钮

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,9 +8,9 @@
       <a href="#" class="mobile-nav">
         <%= image_tag "origin/nav.png" %>
       </a>
-      <a href="/search" class="site-search">
+<!--       <a href="/search" class="site-search">
         <%= image_tag "origin/search.png" %>
-      </a>
+      </a> -->
 
 
       <div class="user-login">
@@ -25,7 +25,7 @@
           <li class="menu-1046"><a href="/nodes/57" title=""<% if @node && (@node.id == 57 || @node.ancestor_ids.include?(57)) %>class="active-trail"<% end %>>资源</a></li>
           <li class="menu-1060"><a href="/nodes/1" title=""<% if @node && (@node.id == 1 || @node.ancestor_ids.include?(1)) %>class="active-trail"<% end %>>你的业务</a></li>
           <li class="menu-1066"><a href="/nodes/58" title=""<% if @node && (@node.id == 58 || @node.ancestor_ids.include?(58)) %>class="active-trail"<% end %>>社会</a></li>
-          <li class="menu-1150 last"><a href="/shop" title="">商店</a></li>
+          <!-- <li class="menu-1150 last"><a href="/shop" title="">商店</a></li> -->
         </ul>
       </div> <!-- /#main-menu -->
 
