--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,7 +43,7 @@
 
 
             <p>我们在这里帮你“尝试素食”一个月或一周</p>
-            <a href="/try-vegan/get-support" class="button try-it__button">去看看!</a>
+            <a href="/nodes/76" class="button try-it__button">去看看!</a>
           </aside>
 
           <div class="page-content index-page-content">
