--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
         </li>
         <li>
           <div class="container skew">
-            <a href="/nodes/1"><h2 class="hero__title">Grow your business today</h2></a>
+            <a href="/nodes/1"><h2 class="hero__title">vegan标准</h2></a>
 
             <a class="button hero__button" href="/nodes/1">Get the trademark</a>
           </div>
