--- a/app/views/nodes/show_list_triple.html.erb
+++ b/app/views/nodes/show_list_triple.html.erb
@@ -4,7 +4,7 @@
       <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
     </div>
     <%= render "header" %>
-    <header class="page-title" style="background-image: url('http://www.vegansociety.com/sites/default/files/take-action_0.jpg');">
+    <header class="page-title" style="background-image: url('<%= image_url "try-vegan.jpg" %>');">
       <div class="skew">
         <div class="container">
           <h1>
