--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,12 +37,12 @@
 
           <aside class="page-sidebar">
             <h2 class="try-it__title">
-              <a href="javascript:void(0);">尝试它一个月</a>
+              <a href="/nodes/76">尝试它一个月</a>
             </h2>
 
 
             <p>我们在这里帮你“尝试素食”一个月或一周</p>
-            <a href="javascript:void(0);" class="button try-it__button">去看看!</a>
+            <a href="/nodes/76" class="button try-it__button">去看看!</a>
           </aside>
 
           <div class="page-content index-page-content">
