--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -4,14 +4,13 @@
 <% end %>
 <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
 <%= f.input :title, label: '标题' %>
-
+<%= f.input :banner_id, collection: Banner.all, label: '页头图片' %>
 <%= f.input :parent_id, collection: Node.sellect_list, label: '父级文章或列表' %>
 <%= f.input :page_type, collection: Node::PageType, label: '展示类型' %>
 
 <% if @node.new_record? || @node.page_type == 'show' %>
 <%= f.input :content, as: :kindeditor, label: '内容', input_html: {window_onload: true, filterMode: false} %>
 <% end %>
-<%#= f.input :banner_type, label: '页头图片' %>
 
 <%= f.input :desc, label: '在列表时显示的简介' %>
 <%= f.input :cover, label: '在列表时显示的图片' %>
