index  尝试三个月

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@
 
           <aside class="page-sidebar">
             <h2 class="try-it__title">
-              <a href="/nodes/76">尝试它一个月</a>
+              <a href="/nodes/76">尝试21天挑战？</a>
             </h2>
 
 
