--- a/app/views/application/_mobile_nav_list.html.erb
+++ b/app/views/application/_mobile_nav_list.html.erb
@@ -1,6 +1,6 @@
 <div class="mobile-nav-list">
   <ul class="mobile-site-nav">
-    <li class="menu-1092 first"><a href="/nodes/whats_news" title="">最新消息</a></li>
+    <li class="menu-1092 first"><a href="/nodes/60" title="">最新消息</a></li>
     <li class="menu-1027"><a href="/nodes/55" title="">尝试vegan</a></li>
     <li class="menu-1034"><a href="/nodes/56" title="">加素行动</a></li>
     <li class="menu-1046"><a href="/nodes/57" title="">vegan资源</a></li>
