优化后台体验

--- a/app/views/application/_info_social.html.erb
+++ b/app/views/application/_info_social.html.erb
@@ -57,46 +57,20 @@
         </div>
         <div class="info-social__panel">
           <h2 class="info-social__title--large">
-            Ready?
+            联系我们
           </h2>
           <div class="social-media">
             <a href="https://twitter.com/TheVeganSociety" target="_blank" class="social-media__icon twitter">
-              Twitter
+              微博
             </a>
             <a href="https://www.facebook.com/TheVeganSociety" target="_blank" class="social-media__icon facebook">
-              Facebook
+              微信
             </a>
             <a href="https://plus.google.com/106749689060212010539/posts" target="_blank" class="social-media__icon google-plus">
-              Google Plus
-            </a>
-            <a href="http://www.youtube.com/user/TheVeganSociety" target="_blank" class="social-media__icon you-tube">
-              You Tube
-            </a>
-            <a href="http://instagram.com/theoriginalvegansociety" target="_blank" class="social-media__icon instagram">
-              Instagram
+              邮件
             </a>
           </div>
 
-
-          <div id="mc_embed_signup">
-            <form action="/sites/all/themes/the_vegan_society/mailchimp-signup.php" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="newsletter-signup validate">
-              <div id="editrow-email-3" class="mc-field-group">
-                <label for="mce-EMAIL" class="newsletter-signup__title">Keep updated with our newsletter:</label>
-                <input class="newsletter-signup__input" type="email" placeholder="Your Email" value="" name="EMAIL" id="mce-EMAIL">
-              </div>
-
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>    
-
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;"><input type="text" name="b_4314d5d15f23141a37adee604_c3de6c6324" value=""></div>
-
-
-              <input accesskey="S" class="button newsletter-signup__button" type="submit" value="Go!" name="subscribe" id="mc-embedded-subscribe">
-            </form>
-          </div>
 
         </div>
       </div>
