--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -7,10 +7,7 @@
 <%= f.input :banner_id, collection: Banner.all, label: '页头图片' %>
 <%= f.input :parent_id, collection: Node.sellect_list, label: '父级文章或列表' %>
 <%= f.input :page_type, collection: Node::PageType, label: '展示类型' %>
-
-<% if @node.new_record? || @node.page_type == 'show' %>
 <%= f.input :content, as: :kindeditor, label: '内容', input_html: {window_onload: true, filterMode: false} %>
-<% end %>
 
 <%= f.input :desc, label: '在列表时显示的简介' %>
 
@@ -28,4 +25,25 @@
     <%= f.button :submit, "保存" %>
   </div>
 </div>
+<% end %>
+
+<% content_for :script do %>
+<script type="text/javascript">
+
+  function adjust_node_content(){
+   if($("#node_page_type").val() == "show"){
+    $(".control-group.node_content").show();
+  }else{
+    $(".control-group.node_content").hide();
+  }
+}
+
+$(function(){
+  adjust_node_content();
+  
+  $("#node_page_type").change(function() {
+    adjust_node_content();
+  });
+});  
+</script>
 <% end %>
