增加分享链接

--- a/app/views/application/_info_social.html.erb
+++ b/app/views/application/_info_social.html.erb
@@ -60,14 +60,14 @@
             联系我们
           </h2>
           <div class="social-media">
-            <a href="https://twitter.com/TheVeganSociety" target="_blank" class="social-media__icon twitter">
-              微博
+            <a href="mailto:TRUEDREAMCC@163.COM" class="social-media__icon twitter">
+              邮件
             </a>
-            <a href="https://www.facebook.com/TheVeganSociety" target="_blank" class="social-media__icon facebook">
+            <a href="javascript:void(0)" target="_blank" class="social-media__icon facebook">
               微信
             </a>
-            <a href="https://plus.google.com/106749689060212010539/posts" target="_blank" class="social-media__icon google-plus">
-              邮件
+            <a href="http://weibo.com/xinmengxiangdahui" target="_blank" class="social-media__icon google-plus">
+              微博
             </a>
           </div>
 
