--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4951,3 +4951,11 @@ html[xmlns] .slides{
 @media (max-width:640px){
   .index-page-content .index-block-list:first-child{padding-left: 0;}
 }
+
+
+
+/*SHARE*/
+.social-media__icon{ position: relative;}
+.social-media__icon .qr-code{ position: absolute; left: -35px; top: 100%; display: inline-block; width: 120px; height: 120px; text-indent: 0;}
+.social-media__icon .qr-code img{ width: 120px;}
+.social-media__icon .qr-code{ display: none;}
