--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,8 @@
       <ul class="slides">
         <li>
           <div class="container skew">
-            <a href="javascript:void(0);"><h2 class="hero__title">&nbsp;</h2></a>
+            <a href="/nodes/1"><h2 class="hero__title">vegan标准</h2></a>
+            <a class="button hero__button" href="/nodes/1">Get the trademark</a>
           </div>
           <%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
@@ -22,9 +23,7 @@
         </li>
         <li>
           <div class="container skew">
-            <a href="/nodes/1"><h2 class="hero__title">vegan标准</h2></a>
-
-            <a class="button hero__button" href="/nodes/1">Get the trademark</a>
+            <a href="javascript:void(0)"><h2 class="hero__title">新梦想</h2></a>
           </div>
           <%= image_tag "origin/shutterstock_94440970.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
