--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4959,3 +4959,7 @@ html[xmlns] .slides{
 .social-media__icon .qr-code{ position: absolute; left: -35px; top: 100%; display: inline-block; width: 120px; height: 120px; text-indent: 0;}
 .social-media__icon .qr-code img{ width: 120px;}
 .social-media__icon .qr-code{ display: none;}
+
+.info-social__panel__text { width: 66.6%;}
+.info-social__panel__text h2 a,.info-social__panel__text a { cursor: default;}
+.info-social__panel__text h2 a:hover,.info-social__panel__text a:hover { text-decoration: none;}
