--- a/app/views/application/_info_social.html.erb
+++ b/app/views/application/_info_social.html.erb
@@ -2,59 +2,51 @@
   <div class="skew">
     <div class="container">
       <div class="info-social__grid">
-        <div class="info-social__panel">
+        <div class="info-social__panel info-social__panel__text">
           <div class="latest-news">
-            <h2><a href="/whats-new/news">Latest News</a></h2>
+            <h2><a href="javascript:void(0)">玛格丽特.米德曾说：</a></h2>
             <div class="region region-footer-firstcolumn">
 
               <div class="view view-latest-information view-id-latest_information view-display-id-block view-dom-id-6850ed42b897dbf7c05470d098bc7913">
 
                 <div class="view-content">
                   <div>
-                    <a href="/node/104/what-can-you-do-24-hours">What can you do in 24 hours?</a>    
-                  </div>
-                  <div>
-
-                    <a href="/node/104/product-recall-alert">Product Recall Alert</a>    
-                  </div>
-                  <div>
-
-                    <a href="/node/104/successful-egm-2014">Successful EGM 2014</a>    
-                  </div>
-                  <div>
-
-                    <a href="/node/104/run-vegan-fall-love-veganism">Run vegan &amp; fall in love with veganism</a>    
-                  </div>
-                  <div>
-
-                    <a href="/node/104/volunteers-week-1-7-june">Volunteer's Week (1-7 June)</a>    
+                    <a href="javascript:void(0)">永远不要怀疑，<br/>那一小部分有思想并且执着努力的公民能够改变这个世界。<br/>事实上，<br/>人类的历史从来都是这样。</a>    
                   </div>
                 </div>
 
               </div>  
             </div>
+            <div class="upcoming-events">
+              <h2><a href="javascript:void(0)">Margaret Mead once said:</a></h2>
+              <div class="region region-footer-secondcolumn">
+
+                <div class="view view-upcoming-events view-id-upcoming_events view-display-id-block view-dom-id-7237ce82f6187bfcffe7c756ca9c9623">
+                  <div class="view-content">
+                    <div>    
+                      <a href="javascript:void(0)">Never doubt,<br/>that a small group of thoughtful and persistent efforts of citizens can change the world.<br/> In fact, <br/>human history has always been so.</a>    
+                    </div>
+                  </div>
+                </div>  
+              </div>
+            </div>
           </div>
         </div>
-        <div class="info-social__panel">
+        <!-- <div class="info-social__panel">
           <div class="upcoming-events">
-            <h2><a href="/whats-new/events">Upcoming Events</a></h2>
+            <h2><a href="/whats-new/events">Margaret Mead once said:</a></h2>
             <div class="region region-footer-secondcolumn">
 
               <div class="view view-upcoming-events view-id-upcoming_events view-display-id-block view-dom-id-7237ce82f6187bfcffe7c756ca9c9623">
-
-
-
                 <div class="view-content">
-                  <div>
-
-                    <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">Saturday, 27 September, 2014</span>    
-                    <a href="/whats-new/events/london-vegfest-0">London VegFest</a>    
+                  <div>    
+                    <a href="/whats-new/events/london-vegfest-0">Never doubt,<br/>that a small group of thoughtful and persistent efforts of citizens can change the world.<br/> In fact, <br/>human history has always been so.</a>    
                   </div>
                 </div>
               </div>  
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="info-social__panel">
           <h2 class="info-social__title--large">
             联系我们
