.try-it__title a

--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4960,6 +4960,8 @@ html[xmlns] .slides{
 .social-media__icon .qr-code img{ width: 120px;}
 .social-media__icon .qr-code{ display: none;}
 
+.try-it__title a{ line-height: 90px;}
+
 .info-social__panel__text { width: 66.6%;}
 .info-social__panel__text h2 a,.info-social__panel__text a { cursor: default;}
 .info-social__panel__text h2 a:hover,.info-social__panel__text a:hover { text-decoration: none;}
