--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -2,11 +2,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('<%= image_url "icomoon.eot" %>-3yyfji');
-	src:url('<%= image_url "icomoon.eot" %>?#iefix-3yyfji') format('embedded-opentype'),
-		url('<%= image_url "icomoon.woff" %>?-3yyfji') format('woff'),
-		url('<%= image_url "icomoon.ttf" %>?-3yyfji') format('truetype'),
-		url('<%= image_url "icomoon.svg" %>?-3yyfji#icomoon') format('svg');
+	src:url('<%= image_url "icomoon.eot" %>yvw6bm');
+	src:url('<%= image_url "icomoon.eot" %>?#iefixyvw6bm') format('embedded-opentype'),
+		url('<%= image_url "icomoon.woff" %>?yvw6bm') format('woff'),
+		url('<%= image_url "icomoon.ttf" %>?yvw6bm') format('truetype'),
+		url('<%= image_url "icomoon.svg" %>?yvw6bm#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -25,17 +25,8 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-bag:before {
-	content: "\e600";
-}
-.icon-earth:before {
-	content: "\e601";
-}
-.icon-gift:before {
-	content: "\e602";
-}
-.icon-people:before {
-	content: "\e603";
+.icon-bean:before {
+	content: "\e604";
 }
 
 .user-login a,
