--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
         </li>
         <li>
           <div class="container skew">
-            <a href="javascript:void(0)"><h2 class="hero__title">新梦想</h2></a>
+            <a href="javascript:void(0)"><h2 class="hero__title">新梦想<span class="icon-bean"></span></h2></a>
           </div>
           <%= image_tag "origin/shutterstock_94440970.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
