banner  Find out more

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,20 +10,21 @@
         <li>
           <div class="container skew">
             <a href="/nodes/1"><h2 class="hero__title">vegan标准</h2></a>
-            <a class="button hero__button" href="/nodes/1">Get the trademark</a>
+            <a class="button hero__button" href="/nodes/1">了解更多</a>
           </div>
           <%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
         <li>
           <div class="container skew">
             <a href="/nodes/3"><h2 class="hero__title">Run Vegan</h2></a>
-            <a class="button hero__button" href="/nodes/3">Find out more</a>
+            <a class="button hero__button" href="/nodes/3">了解更多</a>
           </div>
           <%= image_tag "origin/RV_HeroSlide.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
         <li>
           <div class="container skew">
             <a href="javascript:void(0)"><h2 class="hero__title">新梦想<span class="icon-bean"></span></h2></a>
+            <a class="button hero__button" href="javascript:void(0)">了解更多</a>
           </div>
           <%= image_tag "origin/shutterstock_94440970.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
