--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,14 +9,14 @@
       <ul class="slides">
         <li>
           <div class="container skew">
-            <a href="/nodes/1"><h2 class="hero__title">vegan标准</h2></a>
+            <a href="/nodes/1"><h2 class="hero__title">VEGAN标准</h2></a>
             <a class="button hero__button" href="/nodes/1">了解更多</a>
           </div>
           <%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
         <li>
           <div class="container skew">
-            <a href="/nodes/3"><h2 class="hero__title">Run Vegan</h2></a>
+            <a href="/nodes/3"><h2 class="hero__title">运行素食</h2></a>
             <a class="button hero__button" href="/nodes/3">了解更多</a>
           </div>
           <%= image_tag "origin/RV_HeroSlide.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
