--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -20,10 +20,10 @@
       <div class="site-nav">
         <ul class="site-nav__item">
           <li class="menu-1092 first"><a href="/nodes/60" title=""<% if @node && (@node.id == 60 || @node.ancestor_ids.include?(60)) %>class="active-trail"<% end %>>最新消息</a></li>
-          <li class="menu-1027"><a href="/nodes/55" title=""<% if @node && (@node.id == 55 || @node.ancestor_ids.include?(55)) %>class="active-trail"<% end %>>尝试vegan</a></li>
+          <li class="menu-1027"><a href="/nodes/55" title=""<% if @node && (@node.id == 55 || @node.ancestor_ids.include?(55)) %>class="active-trail"<% end %>>尝试VEGAN</a></li>
           <li class="menu-1034"><a href="/nodes/56" title="" <% if @node && (@node.id == 56 || @node.ancestor_ids.include?(56)) %>class="active-trail"<% end %>>加素行动</a></li>
-          <li class="menu-1046"><a href="/nodes/57" title=""<% if @node && (@node.id == 57 || @node.ancestor_ids.include?(57)) %>class="active-trail"<% end %>>vegan资源</a></li>
-          <li class="menu-1060"><a href="/nodes/1" title=""<% if @node && (@node.id == 1 || @node.ancestor_ids.include?(1)) %>class="active-trail"<% end %>>vegan标准</a></li>
+          <li class="menu-1046"><a href="/nodes/57" title=""<% if @node && (@node.id == 57 || @node.ancestor_ids.include?(57)) %>class="active-trail"<% end %>>VEGAN资源</a></li>
+          <li class="menu-1060"><a href="/nodes/1" title=""<% if @node && (@node.id == 1 || @node.ancestor_ids.include?(1)) %>class="active-trail"<% end %>>VEGAN标准</a></li>
           <li class="menu-1066"><a href="/nodes/58" title=""<% if @node && (@node.id == 58 || @node.ancestor_ids.include?(58)) %>class="active-trail"<% end %>>关于我们</a></li>
           <!-- <li class="menu-1150 last"><a href="/shop" title="">商店</a></li> -->
         </ul>
