--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1402,9 +1402,9 @@ blockquote p:last-child{
   display:inline;
 }
 .page-sidebar{
-  width:30.23256%;
+  width:34.8%;
   float:left;
-  margin-right:4.65116%;
+  margin-right:0;
   display:inline;
 }
 .page-sidebar--right{
@@ -2439,6 +2439,11 @@ textarea{
   z-index:30;
   font-size:1em;
   line-height:1.5em;
+}
+.hero__button{
+  height:120px;
+  padding-top:0;
+  line-height:120px;
 }
 .hero__button:hover{
   background:#01dcd9;
@@ -4271,6 +4276,11 @@ h1{
   padding-top:24px;
   display:none;
 }
+.hero__button{
+  line-height:80px;
+  height:80px;
+  padding-top:0;
+}
 .hero.flexslider .slides li{
   overflow:hidden;
   width:100%;
@@ -4960,7 +4970,7 @@ html[xmlns] .slides{
 .social-media__icon .qr-code img{ width: 120px;}
 .social-media__icon .qr-code{ display: none;}
 
-.try-it__title a{ line-height: 90px;}
+.try-it__title a{ line-height: 90px;font-size: 3.6em; }
 
 .info-social__panel__text { width: 66.6%;}
 .info-social__panel__text h2 a,.info-social__panel__text a { cursor: default;}
