--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
         </li>
         <li>
           <div class="container skew">
-            <a href="/nodes/3"><h2 class="hero__title">运行素食</h2></a>
+            <a href="/nodes/3"><h2 class="hero__title">责任医师协会</h2></a>
             <a class="button hero__button" href="/nodes/3">了解更多</a>
           </div>
           <%= image_tag "origin/RV_HeroSlide.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
