--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -50,3 +50,9 @@
 .icon-bean:before {
 	content: "\e604";
 }
+.line-orange {
+    background: none repeat scroll 0 0 #ff9e16;
+    height: 1px;
+    margin-bottom: 20px;
+    width: 50%;
+}
