--- a/app/views/application/_info_social.html.erb
+++ b/app/views/application/_info_social.html.erb
@@ -17,6 +17,7 @@
 
               </div>  
             </div>
+            <div class="line-orange"></div>
             <div class="upcoming-events">
               <h2><a href="javascript:void(0)">Margaret Mead once said:</a></h2>
               <div class="region region-footer-secondcolumn">
