--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -54,5 +54,29 @@
     background: none repeat scroll 0 0 #ff9e16;
     height: 1px;
     margin-bottom: 20px;
-    width: 50%;
+    width: 30%;
+    margin-left: 5%;
+}
+@media (max-width:55em){
+	.line-orange {
+    width: 29%;
+	}
+}
+@media (max-width:640px){
+	.line-orange {
+    width: 42%;
+    margin-left: 5%;
+	}
+}
+@media (max-width:480px){
+	.line-orange {
+    width: 64%;
+	}
+}
+
+@media (max-width:320px){
+	.info-social__panel__text {width: 100%;}
+	.line-orange {
+    width: 84%;
+	}
 }
